objects/ssot__Activity__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActivityDateTime__c</fullName>
        <label>Activity DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityType__c</fullName>
        <label>Activity Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Activity_Id_map_CalendarEvent_Id_1_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity_Id_map_CalendarEvent_Id_1_1</label>
        <referenceTo>ssot__CalendarEvent__dlm</referenceTo>
        <relationshipLabel>Activity_Id_map_CalendarEvent_Id_1_1</relationshipLabel>
        <relationshipName>Activity_Id_map_CalendarEvent_Id_1_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Activity_Id_map_EmailMessage_Id_1_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity_Id_map_EmailMessage_Id_1_1</label>
        <referenceTo>ssot__EmailMessage__dlm</referenceTo>
        <relationshipLabel>Activity_Id_map_EmailMessage_Id_1_1</relationshipLabel>
        <relationshipName>Activity_Id_map_EmailMessage_Id_1_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Activity_Id_map_VoiceCall_Id_1_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity_Id_map_VoiceCall_Id_1_1</label>
        <referenceTo>ssot__VoiceCall__dlm</referenceTo>
        <relationshipLabel>Activity_Id_map_VoiceCall_Id_1_1</relationshipLabel>
        <relationshipName>Activity_Id_map_VoiceCall_Id_1_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Activity Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SnippetText__c</fullName>
        <label>Snippet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectText__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>